src/test/deca/context/valid/objet/operation-binaire-equals-null.deca
// Description:
//    operation binaire equals avec null
//
// Resultats:
//    //
//
// Historique:
//    cree le 06/01/2023

{
    null == null;
}