src/test/deca/context/invalid/3.33-test-equals.deca
// Description:
//    Test 3.3 fail avec equals
//
// Resultats:
//    
//
// Historique:
//    cree le 06/01/2023

{
    1 == "hello world";
}